[package]
name = "serde-rlp"
version = "0.1.4"
authors = ["Michał Papierski <michal@papierski.net>"]
include = [
    "**/*.rs",
    "Cargo.toml"
]
description = "Ethereum's RLP encoding implemented as a Serde data format"
repository = "https://github.com/althea-mesh/serde-rlp"
license-file = "LICENSE"

[badges]
travis-ci = { repository = "althea-mesh/serde-rlp", branch = "master" }

[dependencies]
byteorder = "1.2"
num = "0.2"
serde = "1.0.0"
thiserror = "1.0"

[dev-dependencies]
serde_derive = "1.0.0"
serde_bytes = "0.11"
