[package]
name = "serde-rlp"
edition = "2021"
version = "0.1.4"
authors = ["Michał Papierski <michal@papierski.net>"]
include = [
    "**/*.rs",
    "Cargo.toml"
]
description = "Ethereum's RLP encoding implemented as a Serde data format"
repository = "https://github.com/althea-mesh/serde-rlp"
license-file = "LICENSE"

[badges]
travis-ci = { repository = "althea-mesh/serde-rlp", branch = "master" }

[dependencies]
serde = "1"

[dev-dependencies]
serde_bytes = "0.11"
serde_derive = "1"
